Changed header text in the device selection popup and fixed text overflow in the SongList component.

--- a/src/components/SongList/SongList.scss
+++ b/src/components/SongList/SongList.scss
@@ -44,12 +44,17 @@
 
     .result-left {
       > div {
+        > div {
+          overflow: hidden;
+        }
         min-width: 0;
       }
 
       align-items: center;
       display: flex;
       min-width: 0;
+      overflow: hidden;
+      white-space: nowrap;
     }
     
     align-items: center;
